--- a/simple.html
+++ b/simple.html
@@ -1,4 +1,7 @@
 <!DOCTYPE html>
+<!--
+	Copyright 2025 GC
+-->	
 <head>
 	<title>Simple Title</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
