--- a/simple.html
+++ b/simple.html
@@ -3,7 +3,7 @@
 	Copyright 2025 GC
 -->	
 <head>
-	<title>Simple Title</title>
+	<title>A real Title</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
@@ -17,7 +17,7 @@
 	<main class="container">
 	<!-- Content Goes Here -->
 		<p>
-			Just some content
+			Some content that has some sense
 		</p>
 	</main>
 	<footer class="container">
