mb conflicting on simple

--- a/simple.html
+++ b/simple.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <!--
 	Copyright 2025 GC
-	adding changes before rebasing
+	Some other changes from master
 -->	
 <head>
-	<title>A real Title</title>
+	<title>A master Title</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
@@ -19,6 +19,7 @@
 	<!-- Content Goes Here -->
 		<p>
 			Some content that has some sense
+			or maybe not
 		</p>
 	</main>
 	<footer class="container">
