adding changes after rebasing

--- a/simple.html
+++ b/simple.html
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
 <!--
 	Copyright 2025 GC
-	Some other changes from master
 -->	
 <head>
-	<title>A master Title</title>
+	<title>A master Title, something</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
