local: updating simple copyright

--- a/simple.html
+++ b/simple.html
@@ -22,7 +22,7 @@
 		</p>
 	</main>
 	<footer class="container">
-		<p>&copy; Xy 2025</p>
+		<p>&copy; Xy 2025 and something else</p>
 	</footer>
 </body>
 </html>
