Done simple after stashing

--- a/simple.html
+++ b/simple.html
@@ -3,7 +3,7 @@
 	Copyright 2025 GC
 -->	
 <head>
-	<title>A master Title, something</title>
+	<title>Stashing title</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
@@ -19,6 +19,7 @@
 		<p>
 			Some content that has some sense
 			or maybe not
+			added from stashing
 		</p>
 	</main>
 	<footer class="container">
